k8s/helm/opencost-helm.yaml
---
# Source: opencost/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencost
  namespace: opencost
  labels:
    helm.sh/chart: opencost-2.5.32
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
    app.kubernetes.io/version: "1.121.3"
    app.kubernetes.io/part-of: opencost
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
  type: "ClusterIP"
  ports:
    - name: http
      port: 9003
      targetPort: 9003
    - name: mcp-server
      port: 8081
      targetPort: 8081
    - name: http-ui
      port: 9090
      targetPort: 9090
---
# Source: opencost/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencost
  namespace: opencost
  labels:
    helm.sh/chart: opencost-2.5.32
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
    app.kubernetes.io/version: "1.121.3"
    app.kubernetes.io/part-of: opencost
    app.kubernetes.io/managed-by: Helm
  annotations:
    checksum/configs: a5927a59fa69efd4096fce9eb587693baab17898ca2f5e52a1f3977b3fe5eef1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opencost
      app.kubernetes.io/instance: opencost
  strategy: 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencost
        app.kubernetes.io/instance: opencost
    spec:
      serviceAccountName: opencost
      automountServiceAccountToken: true
      containers:
        - name: opencost
          image: ghcr.io/opencost/opencost:1.121.3@sha256:4cdd173253e5abba048dfe2cfa968707a5b59d774157d5356940d0d923a6c281
          imagePullPolicy: IfNotPresent
          args:
          ports:
            - containerPort: 9003
              name: http
            - containerPort: 8081
              name: mcp-server
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 55Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: 9003
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9003
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9003
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            successThreshold: 1
          volumeMounts:
            - mountPath: /tmp/custom-config
              name: custom-configs
        - name: opencost-ui
          image: ghcr.io/opencost/opencost-ui:1.121.3@sha256:99ee2db766a074fcbc321bbddfae1851c159339f463a3c32a9ba87727576a3ed
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http-ui
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 55Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: opencost-ui-nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.nginx.conf
              subPath: default.nginx.conf
      volumes:
        - name: custom-configs
          emptyDir: {}
        - name: opencost-ui-nginx-config-volume
          configMap:
            name: opencost-ui-nginx-config
            items:
              - key: nginx.conf
                path: default.nginx.conf
---
# Source: opencost/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost-ui
  namespace: opencost
  labels:
    helm.sh/chart: opencost-2.5.32
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
    app.kubernetes.io/version: "1.121.3"
    app.kubernetes.io/part-of: opencost
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - opencost.walnuts.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opencost
          port: 9090
